--- a/endscreen/endscreen.html
+++ b/endscreen/endscreen.html
@@ -2,133 +2,6 @@
 <meta charset="UTF-8">
 <title>Video endscreen</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<style>
-    html, body {
-    width: 100%;
-    height: 100%;
-    background-color: blue;
-  }
-  
-  .modal {
-    height: 100%;
-    width: 100%;
-    background: indigo;
-  }
-  
-  img {
-    max-width: 400px;
-    min-width: 140px;
-    max-height: 300px;
-    min-height: 105px;
-  }
-  
-  img {
-    width: 100%;
-    height: auto;
-  }
-  
-  .video-wrapper {
-    width: 100%;
-    height: 50%;
-    position: relative;
-    top: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  @media (min-width: 800px) {
-    .video-wrapper {
-      width: 50%;
-      height: 100%;
-      top: 0;
-    }
-  }
-  .header {
-    height: 77px;
-    background-color: red;
-    width: 100%;
-    opacity: 0.5;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1;
-  }
-  
-  video {
-    width: 100%;
-    max-height: 100%;
-    display: block;
-  }
-  
-  .endscreen {
-    width: 100%;
-    height: 50%;
-    padding: 82px 5px 5px;
-    background-color: #fff;
-    position: absolute;
-    top: 0;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  @media (min-width: 800px) {
-    .endscreen {
-      width: 50%;
-      height: 100%;
-      right: 0;
-      padding-bottom: 107px;
-      /* align image verically */
-    }
-  }
-  .endscreen h2 {
-    font-size: 20px;
-    margin-bottom: 10px;
-    text-align: center;
-    text-transform: uppercase;
-    height: 30px;
-  }
-  
-  ul {
-    height: 100%;
-    display: flex;
-  }
-  
-  li {
-    width: 50%;
-    height: 100%;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
-    box-sizing: border-box;
-  }
-  
-  /*
-  Landscape large
-  */
-  @media (min-width: 800px) and (min-height: 444px) {
-    ul {
-      flex-direction: column;
-    }
-  
-    li {
-      width: 100%;
-      align-items: flex-end;
-    }
-  
-    li.odd {
-      align-items: flex-start;
-    }
-  
-    img {
-      width: auto;
-      height: 100%;
-    }
-  }
-  </style>
 <script>
   window.console = window.console || function(t) {};
 </script>
@@ -141,56 +14,60 @@
 
 
 <style>
-  html, body {
+html,
+body {
   width: 100%;
   height: 100%;
-  background-color: blue;
+  background-color: #000;
 }
 
 .modal {
   height: 100%;
   width: 100%;
-  background: indigo;
+}
+.modal::after {
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  content: "portrait-width-regular: 340px || portrait-height-regular: 734px \alandscape-width-regular: 680px || landscape-height-regular: 474px";
+  white-space: pre;
+  color: red;
 }
 
 img {
   max-width: 400px;
-  min-width: 140px;
   max-height: 300px;
-  min-height: 105px;
-}
-
-img {
-  width: 100%;
-  height: auto;
+  min-width: 160px;
+  min-height: 120px;
 }
 
 .video-wrapper {
-  width: 100%;
-  height: 50%;
   position: relative;
-  top: 50%;
+  bottom: 0;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: absolute;
 }
 
-@media (min-width: 800px) {
-  .video-wrapper {
-    width: 50%;
-    height: 100%;
-    top: 0;
-  }
-}
-.header {
+.header,
+.footer {
   height: 77px;
-  background-color: red;
+  background-color: #fff;
   width: 100%;
   opacity: 0.5;
   position: fixed;
-  top: 0;
   left: 0;
   z-index: 1;
+}
+
+.header {
+  top: 0;
+}
+
+.footer {
+  bottom: 0;
 }
 
 video {
@@ -200,10 +77,7 @@ video {
 }
 
 .endscreen {
-  width: 100%;
-  height: 50%;
-  padding: 82px 5px 5px;
-  background-color: #fff;
+  padding-top: 77px;
   position: absolute;
   top: 0;
   box-sizing: border-box;
@@ -211,21 +85,14 @@ video {
   flex-direction: column;
 }
 
-@media (min-width: 800px) {
-  .endscreen {
-    width: 50%;
-    height: 100%;
-    right: 0;
-    padding-bottom: 107px;
-    /* align image verically */
-  }
-}
 .endscreen h2 {
   font-size: 20px;
   margin-bottom: 10px;
   text-align: center;
   text-transform: uppercase;
   height: 30px;
+  color: #fff;
+  line-height: 1.2;
 }
 
 ul {
@@ -234,38 +101,118 @@ ul {
 }
 
 li {
-  width: 50%;
+  width: 100%;
   height: 100%;
   overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 10px;
+  padding: 5px;
   box-sizing: border-box;
 }
 
+li.odd {
+  display: none;
+}
+
 /*
-Landscape large
+PORTRAIT BREKAPOINTS
 */
-@media (min-width: 800px) and (min-height: 444px) {
+@media (orientation: portrait) {
+  img {
+    width: auto;
+    height: 100%;
+  }
+
+  .video-wrapper {
+    width: 100%;
+    height: 50%;
+  }
+
+  .endscreen {
+    width: 100%;
+    height: 50%;
+  }
+}
+@media (orientation: portrait) and (min-height: 734px) {
   ul {
     flex-direction: column;
   }
 
   li {
-    width: 100%;
     align-items: flex-end;
   }
 
   li.odd {
     align-items: flex-start;
+    display: flex;
+  }
+}
+@media (orientation: portrait) and (min-width: 340px) {
+  ul {
+    flex-direction: row;
   }
 
+  li {
+    align-items: center;
+    justify-content: center;
+  }
+
+  li.odd {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
+
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
+/*
+LANDSCAPE BREKAPOINTS
+*/
+@media (orientation: landscape) {
   img {
     width: auto;
     height: 100%;
   }
+
+  .video-wrapper {
+    width: 50%;
+    height: 100%;
+  }
+
+  .endscreen {
+    width: 50%;
+    height: 100%;
+    right: 0;
+    padding-bottom: 107px;
+    /* align image verically */
+  }
 }
+@media (orientation: landscape) and (min-width: 680px) {
+  li.odd {
+    display: flex;
+  }
+}
+@media (orientation: landscape) and (min-height: 474px) {
+  ul {
+    flex-direction: column;
+  }
+
+  li {
+    align-items: flex-end;
+  }
+
+  li.odd {
+    align-items: flex-start;
+    display: flex;
+  }
+}
+
+
+
 </style><div class="modal">
 <div class="video-wrapper">
 <div class="header"></div>
@@ -274,6 +221,7 @@ Landscape large
 <source src="/media/examples/flower.mp4" type="video/mp4">
 Sorry, your browser doesn't support embedded videos.
 </video>
+<div class="footer"></div>
 </div>
 <div class="endscreen">
 <h2>Bästa tipsen</h2>
