--- a/endscreen/index.html
+++ b/endscreen/index.html
@@ -47,6 +47,16 @@
             height: 812
         },
         {
+            name: 'iPhone 6/7/8',
+            width: 375,
+            height: 667
+        },
+        {
+            name: 'iPhone 5',
+            width: 320,
+            height: 568
+        },
+        {
             name: 'iPhone 4',
             width: 320,
             height: 480
